# TinyDB

./: .gitignore  GUI_FEATURE_BACKLOG.md  README.md  install.bat  install_gui_deps.bat  pyproject.toml  run_gui.bat
scripts/: bench_tps.py
tests/: test_alter.py  test_api_transactions_params.py  test_auth_api.py  test_constraints.py  test_crud.py  test_indexes.py  test_introspection.py  test_joins_advanced.py  test_parser.py  test_recovery.py  test_security.py  test_select_features.py  test_types.py
tinydb_engine/: __init__.py  api.py  ast_nodes.py  executor.py  gui.py  parser.py  repl.py  schema.py  security.py
tinydb_engine/index/: __init__.py  btree.py
tinydb_engine/storage/: __init__.py  catalog.py  pager.py  record.py
tinydb_engine/wal/: __init__.py  wal.py
tinydb_test_project/: README.md  demo_app.db.wal  main.py  yes.csv
